about us page spacing fixed

--- a/src/style/partials/_about.scss
+++ b/src/style/partials/_about.scss
@@ -242,6 +242,7 @@ body {
 .row_holder.txt_img {
   padding: 26px 0 50px;
   margin-bottom: 30px;
+  border: none !important;
   .col_6 {
     padding: 0;
     @media screen and (max-width: $layout-breakpoint) {
@@ -745,10 +746,11 @@ body {
 }
 
 #ceo {
-  margin-top: 200px;
+  margin-top: 50px;
   background-color: #f3f3f3;
   color: #000;
-  padding: 100px 0px;
+  padding: 50px 0px;
+  padding-bottom: 100px;
 
   img {
     width: 360px;
